Cleanup pom and use test aggregator now (as bom)