@@ -41,13 +41,30 @@
 
         <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 
+        <bc.version>2.73.9</bc.version>
         <deltaspike.version>2.0.1</deltaspike.version>
         <dropwizard.version>5.0.0</dropwizard.version>
         <modernizer.plugin>2.9.0</modernizer.plugin>
+        <eclipselink.version>4.0.8</eclipselink.version>
+        <hk2.version>3.1.1</hk2.version>
+        <janino.version>3.1.12</janino.version>
+        <jersey.version>4.0.0</jersey.version>
+        <jna.version>5.18.1</jna.version>
+        <logback.version>1.5.20</logback.version>
+        <slf4j.version>2.0.17</slf4j.version>
+        <spring.version>6.2.12</spring.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.hazendaz</groupId>
+                <artifactId>test-aggregator</artifactId>
+                <version>1.1.0</version>
+                <scope>test</scope>
+                <type>pom</type>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.deltaspike.distribution</groupId>
                 <artifactId>distributions-bom</artifactId>
@@ -60,16 +77,7 @@
 
     <dependencies>
         <!-- mine -->
-        <!-- Needs released...
-        <dependency>
-            <groupId>com.github.hazendaz</groupId>
-            <artifactId>test-aggregator</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>test</scope>
-            <type>pom</type>
-        </dependency>
-        -->
-        <!-- Must build resources lite to incude here
+        <!-- Must build resources lite to include here or release it first
         <dependency>
             <groupId>com.github.hazendaz</groupId>
             <artifactId>fileUploadResourcesLite</artifactId>
@@ -83,6 +91,7 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>6.0.1</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -169,6 +178,7 @@
             <groupId>se.jiderhamn.classloader-leak-prevention</groupId>
             <artifactId>classloader-leak-prevention-servlet3</artifactId>
             <version>2.7.0</version>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <groupId>javax.servlet</groupId>
@@ -192,6 +202,7 @@
             <groupId>com.github.albfernandez.richfaces</groupId>
             <artifactId>richfaces</artifactId>
             <version>4.6.21.ayg</version>
+            <scope>compile</scope>
         </dependency>
         <!-- Added for future use -->
         <dependency>
@@ -227,13 +238,13 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpg-lts8on</artifactId>
-            <version>2.73.9</version>
+            <version>${bc.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-lts8on</artifactId>
-            <version>2.73.9</version>
+            <version>${bc.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -523,61 +534,61 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>2.0.17</version>
+            <version>${slf4j.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>2.0.17</version>
+            <version>${slf4j.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.17</version>
+            <version>${slf4j.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-ext</artifactId>
-            <version>2.0.17</version>
+            <version>${slf4j.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.5.20</version>
+            <version>${logback.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.5.20</version>
+            <version>${logback.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
-            <version>3.1.12</version>
+            <version>${janino.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.janino</groupId>
             <artifactId>commons-compiler</artifactId>
-            <version>3.1.12</version>
+            <version>${janino.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>5.18.1</version>
+            <version>${jna.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>5.18.1</version>
+            <version>${jna.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -595,49 +606,43 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>4.0.0</version>
+            <version>${jersey.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet</artifactId>
-            <version>4.0.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet-core</artifactId>
-            <version>3.1.11</version>
+            <version>${jersey.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-common</artifactId>
-            <version>4.0.0</version>
+            <version>${jersey.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>4.0.0</version>
+            <version>${jersey.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
-            <version>4.0.0</version>
+            <version>${jersey.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
             <artifactId>hk2-api</artifactId>
-            <version>3.1.1</version>
+            <version>${hk2.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
             <artifactId>hk2-locator</artifactId>
-            <version>3.1.1</version>
+            <version>${hk2.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -662,21 +667,24 @@
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.asm</artifactId>
             <version>9.9.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.core</artifactId>
-            <version>4.0.8</version>
+            <version>${eclipselink.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
-            <version>4.0.8</version>
+            <version>${eclipselink.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>6.2.12</version>
+            <version>${spring.version}</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -688,7 +696,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>6.2.12</version>
+            <version>${spring.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -733,7 +741,7 @@
                                     <pluginExecutionFilter>
                                         <groupId>io.smallrye</groupId>
                                         <artifactId>jandex-maven-plugin</artifactId>
-                                        <versionRange>[3.2.0,)</versionRange>
+                                        <versionRange>[3.5.1,)</versionRange>
                                         <goals>
                                             <goal>jandex</goal>
                                         </goals>
@@ -748,6 +756,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>io.smallrye</groupId>
@@ -769,7 +778,6 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>5.0.0</version>
                 <configuration>
                     <licenseSets>
                         <licenseSet>
@@ -782,16 +790,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>jdk17on</id>
-            <activation>
-                <jdk>[17,)</jdk>
-            </activation>
-            <properties>
-                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-            </properties>
-        </profile>
-    </profiles>
 </project>
